<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Racingtracker</string>
    <string name="app_title">Racing Tracker</string>

    <string name="new_race">New Race</string>
    <string name="create_new_race">Create New Race</string>
    <string name="race_name">Race Name :</string>
    <string name="saved_race">Saved Race</string>
    <string name="create_new">Create New</string>

    <string name="description">Description :</string>

    <string name="create_new_match">Create New Match</string>
    <string name="match_list">Match List</string>
    <string name="add_match">Add Match</string>
    <string name="match_name">Match Name:</string>

    <string name="create_new_record">Create New Record</string>
    <string name="record_list">Record List</string>
    <string name="add_record">Add Record</string>
    <string name="record_name">Person Name:</string>
    <string name="record_time">Time :</string>

    <string name="preferences">race.preferences</string>
    <string name="choose_language">Choose Languages</string>

    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="start_time">Start</string>
    <string name="stop_time">Stop Time</string>
</resources>
