<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="id.ac.ui.cs.mobileprogramming.frannajaya.racingtracker.viewmodel.ChooseLanguageViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/home"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#DFDFDF"
        >
        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title"
            android:textAppearance="@style/app_title"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/new_race_button"
            android:layout_width="220sp"
            android:layout_height="55sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/greenbutton"
            android:textAppearance="@style/new_race"
            android:text="@string/english"
            android:layout_marginBottom="10dp"
            android:onClick="@{() -> viewModel.onEnSelected()}"
            />

        <Button
            android:id="@+id/saved_race_button"
            android:layout_width="220sp"
            android:layout_height="55sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bluebutton"
            android:textAppearance="@style/saved_race"
            android:text="@string/indonesia"
            android:onClick="@{() -> viewModel.onInSelected()}"
            />

    </LinearLayout>
</layout>